add get weather by date and by date hour
